--- a/samples/svrskel/CMakeLists.txt
+++ b/samples/svrskel/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 2.6.0)
 
 add_executable(svrskel
-    svrmain.c
-    server.c
+    svrskel.c
 )
 
 target_link_libraries(svrskel PRIVATE slmp)
