--- a/samples/echocli/CMakeLists.txt
+++ b/samples/echocli/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 2.6.0)
 
-add_executable(echocli 
-    echocli.c
-)
+set(sources echocli.c)
+
+if (CMAKE_HOST_WIN32)
+    set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/../win32rsrc/rsrc.rc)
+endif ()
+
+add_executable(echocli ${sources})
 
 target_link_libraries(echocli PRIVATE slmp)
 
