--- a/libslmp/CommandCodecGenerator/Ccgen/Ccgen.rc
+++ b/libslmp/CommandCodecGenerator/Ccgen/Ccgen.rc
@@ -436,17 +436,20 @@ VS_VERSION_INFO VERSIONINFO
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904B0"
+        BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "\0"
+            VALUE "Comments", "\0"
+            VALUE "CompanyName", "Neucrede\0"
             VALUE "FileDescription", "Ccgen MFC Application\0"
             VALUE "FileVersion", "1, 0, 0, 1\0"
-            VALUE "InternalName", "Ccgen\0"
-            VALUE "LegalCopyright", "Neucrede <neucrede@sina.com>\0"
-            VALUE "LegalTrademarks", "\0"
+            VALUE "InternalName", "Ccgen.EXE\0"
+            VALUE "LegalCopyright", "Copyright (C) 2021-2023 Neucrede <neucrede@sina.com>\0"
+            VALUE "LegalTrademarks", "BSD 2-Clause License\0"
             VALUE "OriginalFilename", "Ccgen.EXE\0"
-            VALUE "ProductName", "Ccgen Application\0"
+            VALUE "PrivateBuild", "\0"
+            VALUE "ProductName", "libslmp\0"
             VALUE "ProductVersion", "1, 0, 0, 1\0"
+            VALUE "SpecialBuild", "\0"
         END
     END
     BLOCK "VarFileInfo"
