--- a/samples/echosvr/CMakeLists.txt
+++ b/samples/echosvr/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 2.6.0)
 
-add_executable(echosvr 
-    echosvr.c
-)
+set(sources echosvr.c)
+
+if (CMAKE_HOST_WIN32)
+    set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/../win32rsrc/rsrc.rc)
+endif ()
+
+add_executable(echosvr ${sources})
 
 target_link_libraries(echosvr PRIVATE slmp)
 
