--- a/samples/mcdemo/CMakeLists.txt
+++ b/samples/mcdemo/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 2.6.0)
 
-add_executable(mcdemo 
-    mcdemo.c
-)
+set(sources mcdemo.c)
+
+if (CMAKE_HOST_WIN32)
+    set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/../win32rsrc/rsrc.rc)
+endif ()
+
+add_executable(mcdemo ${sources})
 
 target_link_libraries(mcdemo PRIVATE melcli)
 
