--- a/samples/svrskel/CMakeLists.txt
+++ b/samples/svrskel/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 2.6.0)
 
-add_executable(svrskel
-    svrskel.c
-)
+set(sources svrskel.c)
+
+if (CMAKE_HOST_WIN32)
+    set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/../win32rsrc/rsrc.rc)
+endif ()
+
+add_executable(svrskel ${sources})
 
 target_link_libraries(svrskel PRIVATE slmp)
 
