--- a/libmelcli/CMakeLists.txt
+++ b/libmelcli/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 2.6.0)
 
-project(melcli)
-
 include(GNUInstallDirs)
 
-file (GLOB sources ${PROJECT_SOURCE_DIR}/*.c ${PROJECT_SOURCE_DIR}/*.cpp)
+file (GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 if (CMAKE_HOST_WIN32)
-    set(sources ${sources} ${PROJECT_SOURCE_DIR}/libmelcli.def ${PROJECT_SOURCE_DIR}/win32rsrc/rsrc.rc)
+    set(sources ${sources} ${CMAKE_CURRENT_SOURCE_DIR}/libmelcli.def ${CMAKE_CURRENT_SOURCE_DIR}/win32rsrc/rsrc.rc)
+    set(LIBRARIES ${CMAKE_INSTALL_LIBDIR}/libmelcli${CMAKE_IMPORT_LIBRARY_SUFFIX})
+else ()
+    set(LIBRARIES ${CMAKE_INSTALL_LIBDIR}/libmelcli${CMAKE_SHARED_LIBRARY_SUFFIX})
 endif ()
 
 add_library(melcli SHARED ${sources})
@@ -20,19 +21,19 @@ set_target_properties(melcli PROPERTIES
 )
 
 target_include_directories(melcli PUBLIC 
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/melcli>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 target_include_directories(melcli PUBLIC 
-    $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
 )
 
 include(CheckIncludeFile)
 CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
 if (NOT HAVE_STDINT_H)
     target_include_directories(melcli SYSTEM PUBLIC
-        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/hdrsup>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/hdrsup>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/melcli/hdrsup>
     )
 endif ()
@@ -40,14 +41,14 @@ endif ()
 include(CheckFunctionExists)
 CHECK_FUNCTION_EXISTS(strlcpy HAVE_STRLCPY)
 if (NOT HAVE_STRLCPY)
-    target_sources(melcli PRIVATE ${PROJECT_SOURCE_DIR}/strlcpy.c)
+    target_sources(melcli PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/strlcpy.c)
 endif ()
 
 target_link_libraries(melcli PRIVATE slmp)
 
 configure_file(
-    ${PROJECT_SOURCE_DIR}/config.h.in
-    ${PROJECT_BINARY_DIR}/config.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
+    ${CMAKE_CURRENT_BINARY_DIR}/config.h
 )
 
 install(
@@ -65,19 +66,45 @@ install(
 )
 
 install(
-    DIRECTORY ${PROJECT_SOURCE_DIR}/include/
+    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     FILES_MATCHING REGEX ".*[.][Hh][^~]*$"
 )
 
 install(
-    FILES ${PROJECT_BINARY_DIR}/config.h
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/config.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/melcli
 )
 
 if (NOT HAVE_STDINT_H)
     install(
-        DIRECTORY ${PROJECT_SOURCE_DIR}/hdrsup/
+        DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/hdrsup/
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/melcli/hdrsup
     )
 endif ()
+
+set(INCLUDE_DIRS ${CMAKE_INSTALL_INCLUDEDIR})
+set(LIBRARY_DIRS ${CMAKE_INSTALL_LIBDIR})
+
+include(CMakePackageConfigHelpers)
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/config.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/libmelcliConfig.cmake"
+    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PATH_VARS INCLUDE_DIRS LIBRARY_DIRS LIBRARIES
+    NO_SET_AND_CHECK_MACRO
+    NO_CHECK_REQUIRED_COMPONENTS_MACRO
+)
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/libmelcliConfigVersion.cmake"
+    VERSION 1.0.1
+    COMPATIBILITY AnyNewerVersion
+)
+install(
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/libmelcliConfig.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/libmelcliConfigVersion.cmake"
+    DESTINATION
+        ${CMAKE_INSTALL_LIBDIR}
+)
+
